--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <html>
+<body>
+    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="page1.html">page1</a></li>
+                <li><a href="page2.html">page2</a></li>
+                <li><a href="page3.html">page3</a></li>
+                <li><a href="page4.html">page4</a></li>
 
+            </ul>
+        </nav>
+        <h1>Home</h1>
+    </header>
+    
+</body>
 </html>
