--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,20 @@
+<html>
+<head>
+<title>Page 2</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="page1.html">page1</a></li>
+                <li><a href="page2.html">page2</a></li>
+                <li><a href="page3.html">page3</a></li>
+                <li><a href="page4.html">page4</a></li>
 
+            </ul>
+        </nav>
+        <h1>Page2</h1>
+    </header>
+</body>
+</html>
