--- a/page1.html
+++ b/page1.html
@@ -15,6 +15,16 @@
             </ul>
         </nav>
         <h1>Page1</h1>
+        <h2>WHAT IS BIG DATA ?</h2>
+        <p>The term "Big Data" refers to the evolution and use of technologies that provide the right user at the right time with the right information from a mass of data that has been growing exponentially for a long time in our society. The challenge is not only to deal with rapidly increasing volumes of data but also the difficulty of managing increasingly heterogeneous formats as well as increasingly complex and interconnected data.</p>
+        <p>Being a complex polymorphic object, its definition varies according to the communities that are interested in it as a user or provider of services. Invented by the giants of the web, the Big Data presents itself as a solution designed to provide everyone a real-time access to giant databases. Big Data is a very difficult concept to define precisely, since the very notion of big in terms of volume of data varies from one area to another. It is not defined by a set of technologies, on the contrary, it defines a category of techniques and technologies. This is an emerging field, and as we seek to learn how to implement this new paradigm and harness the value, the definition is changing.</p>
+        <p>The term Big Data refers to gigantic larger datasets (volume); more diversified, including structured, semi-structured, and unstructured (variety) data, and arriving faster (velocity) than before. These are the 3V.</p>
+        <p>Volume: represents the amount of data generated, stored and operated within the system. The increase in volume is explained by the increase in the amount of data generated and stored, but also by the need to exploit it.</p>
+        <p>Variety: represents the multiplication of the types of data managed by an information system. This multiplication leads to a complexity of links and link types between these data. The variety also relates to the possible uses associated with a raw data.</p>
+        <p>Velocity: represents the frequency at which data is generated, captured, and shared. The data arrive by stream and must be analyzed in real time.</p>
+        <p>To this classical characterization, two other "V"s are important:</p>
+        <p>Veracity: level of quality, accuracy and uncertainty of data and data sources.</p>
+        <p>Value: the value and potential derived from data.</p>
     </header>
 </body>
 </html>
