--- a/page4.html
+++ b/page4.html
@@ -15,7 +15,7 @@
             </ul>
         </nav>
         <h1>Page4</h1>
-        <p><Big data refers to the set of numerical data produced by the use of new technologies for personal or professional purposes. Big Data analytics is the process of examining these data in order to uncover hidden patters, market trends, customer preferences and other useful information in order to make the right decisions. Big Data Analytics is a fast growing technology. It has been adopted by the most unexpected industries and became an industry on its own. But analysis of these data in the framework of the Big Data is a process that seems sometimes quite intrusive./p>
+        <p>Big data refers to the set of numerical data produced by the use of new technologies for personal or professional purposes. Big Data analytics is the process of examining these data in order to uncover hidden patters, market trends, customer preferences and other useful information in order to make the right decisions. Big Data Analytics is a fast growing technology. It has been adopted by the most unexpected industries and became an industry on its own. But analysis of these data in the framework of the Big Data is a process that seems sometimes quite intrusive.</p>
         <p>Analytics is a data science. BI takes care of the decision-making part while Data Analytics is the process of asking questions. Analytics tools are used when company needs to do a forecasting and wants to know what will happen in the future, while BI tools help to transform those forecasts into common language.More often, Big Data is considered as the successor to Business Intelligence. This comparison will be discussed in a future work.</p>        
     </header>
 </body>
