Update and rename page1.html to WHAT IS BIG DATA.html

--- a/WHAT IS BIG DATA.html
+++ b/WHAT IS BIG DATA.html
@@ -1,21 +1,20 @@
 <html>
 <head>
-<title>Page 1</title>
+<title>WHAT IS BIG DATA</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="page1.html">page1</a></li>
+                <li><a href="WHAT IS BIG DATA.html">page1</a></li>
                 <li><a href="page2.html">page2</a></li>
                 <li><a href="page3.html">page3</a></li>
                 <li><a href="page4.html">page4</a></li>
 
             </ul>
         </nav>
-        <h1>Page1</h1>
-        <h2>WHAT IS BIG DATA ?</h2>
+        <h1>WHAT IS BIG DATA ?</h1>
         <p>The term "Big Data" refers to the evolution and use of technologies that provide the right user at the right time with the right information from a mass of data that has been growing exponentially for a long time in our society. The challenge is not only to deal with rapidly increasing volumes of data but also the difficulty of managing increasingly heterogeneous formats as well as increasingly complex and interconnected data.</p>
         <p>Being a complex polymorphic object, its definition varies according to the communities that are interested in it as a user or provider of services. Invented by the giants of the web, the Big Data presents itself as a solution designed to provide everyone a real-time access to giant databases. Big Data is a very difficult concept to define precisely, since the very notion of big in terms of volume of data varies from one area to another. It is not defined by a set of technologies, on the contrary, it defines a category of techniques and technologies. This is an emerging field, and as we seek to learn how to implement this new paradigm and harness the value, the definition is changing.</p>
         <p>The term Big Data refers to gigantic larger datasets (volume); more diversified, including structured, semi-structured, and unstructured (variety) data, and arriving faster (velocity) than before. These are the 3V.</p>
