--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="WHAT IS BIG DATA.html">page1</a></li>
+                <li><a href="WHAT IS BIG DATA.html">WHAT IS BIG DATA</a></li>
                 <li><a href="page2.html">page2</a></li>
                 <li><a href="page3.html">page3</a></li>
                 <li><a href="page4.html">page4</a></li>
