Update and rename page2.html to WHAT IS BIG DATA ANALYTICS.html

--- a/WHAT IS BIG DATA ANALYTICS.html
+++ b/WHAT IS BIG DATA ANALYTICS.html
@@ -1,21 +1,20 @@
 <html>
 <head>
-<title>Page 2</title>
+<title>WHAT IS BIG DATA ANALYTICS</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">home</a></li>
+                <li><a href="Introduction to big data.html">Introduction to big data</a></li>
                 <li><a href="WHAT IS BIG DATA.html">WHAT IS BIG DATA</a></li>
-                <li><a href="page2.html">page2</a></li>
-                <li><a href="page3.html">page3</a></li>
-                <li><a href="page4.html">page4</a></li>
+                <li><a href="WHAT IS BIG DATA ANALYTICS.html">WHAT IS BIG DATA ANALYTICS</a></li>
+                <li><a href="HADOOP FOR BIG DATA APPLICATIONS.html">HADOOP FOR BIG DATA APPLICATIONS</a></li>
+                <li><a href="CONCLUSION.html">CONCLUSION</a></li>
 
             </ul>
         </nav>
-        <h1>Page2</h1>
-        <h2>WHAT IS BIG DATA ANALYTICS ?</h2>
+        <h1>WHAT IS BIG DATA ANALYTICS ?</h1>
         <p>Big Data generally refers to data that exceeds the typical storage, processing, and computing capacity of conventional databases and data analysis techniques. As a resource, Big Data requires tools and methods that can be applied to analyze and extract patterns from large-scale data.</p>
         <p>The analysis of structured data evolves due to the variety and velocity of the data manipulated. Therefore, it is no longer enough to analyze data and produce reports, the wide variety of data means that the systems in place must be capable of assisting in the analysis of data. The analysis consists of automatically determining, within a variety of rapidly changing data, the correlations between the data in order to help in the exploitation of it.</p>
         <p>Big Data Anlytics refers to the process of collecting, organizing, analyzing large data sets to discover different patterns and other useful information. Big data analytics is a set of technologies and techniques that require new forms of integration to disclose large hidden values from large datasets that are different from the usual ones, more complex, and of a large enormous scale. It mainly focuses on solving new problems or old problems in better and effective ways.</p>
