Update and rename page3.html to HADOOP FOR BIG DATA APPLICATIONS.html

--- a/HADOOP FOR BIG DATA APPLICATIONS.html
+++ b/HADOOP FOR BIG DATA APPLICATIONS.html
@@ -1,21 +1,20 @@
 <html>
 <head>
-<title>Page 3</title>
+<title>HADOOP FOR BIG DATA APPLICATIONS</title>
 </head>
 <body>
     <header>
     <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
+            <li><a href="Introductaion to big data.html">Introductaion to big data</a></li>
             <li><a href="WHAT IS BIG DATA.html">WHAT IS BIG DATA</a></li>
-            <li><a href="page2.html">page2</a></li>
-            <li><a href="page3.html">page3</a></li>
-            <li><a href="page4.html">page4</a></li>
+            <li><a href="WHAT IS BIG DATA ANALYTICS.html">WHAT IS BIG DATA ANALYTICS</a></li>
+            <li><a href="HADOOP FOR BIG DATA APPLICATIONS.html">HADOOP FOR BIG DATA APPLICATIONS</a></li>
+            <li><a href="CONCLUSION.html">CONCLUSION</a></li>
 
         </ul>
     </nav>
-    <h1>Page3</h1>
-        <h2>HADOOP FOR BIG DATA APPLICATIONS</h2>
+    <h1>HADOOP FOR BIG DATA APPLICATIONS</h1>
         <p>Big Data are collections of information that would have been considered gigantic, impossible to store and process, a decade ago.</p>
         <p>decade ago.The processing of such large quantities of data imposes particular methods. A classic database management system is unable to process as much information. Hadoop is an open source software product (or, more accurately, „software library framework‟) that is collaboratively produced and freely distributed by the Apache Foundation – effectively, it is a developer‟s toolkit designed to simplify the building of Big Data solutions.</p>
         <p>Hadoop is used by companies with very large volumes of data to process. Among them are web giants such as Facebook, Twitter, LinkedIn, eBay and Amazon. Hadoop is a distributed data processing and management system. It contains many components, including: HDFS, YARN,Map Reduce.</p>
