Update WHAT IS BIG DATA.html

--- a/WHAT IS BIG DATA.html
+++ b/WHAT IS BIG DATA.html
@@ -6,11 +6,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">home</a></li>
+                <li><a href="Introduction to big data.html">Introduction to big data</a></li>
                 <li><a href="WHAT IS BIG DATA.html">WHAT IS BIG DATA</a></li>
-                <li><a href="page2.html">page2</a></li>
-                <li><a href="page3.html">page3</a></li>
-                <li><a href="page4.html">page4</a></li>
+                <li><a href="WHAT IS BIG DATA ANALYTICS.html">WHAT IS BIG DATA ANALYTICS</a></li>
+                <li><a href="HADOOP FOR BIG DATA APPLICATIONS.html">HADOOP FOR BIG DATA APPLICATIONS</a></li>
+                <li><a href="CONCLUSION.html">CONCLUSION</a></li>
 
             </ul>
         </nav>
