Update and rename Introduction to big data.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="Introduction to big data.html">Introduction to big data</a></li>
+                <li><a href="index.html">index</a></li>
                 <li><a href="WHAT IS BIG DATA.html">WHAT IS BIG DATA</a></li>
                 <li><a href="WHAT IS BIG DATA ANALYTICS.html">WHAT IS BIG DATA ANALYTICS</a></li>
                 <li><a href="HADOOP FOR BIG DATA APPLICATIONS.html">HADOOP FOR BIG DATA APPLICATIONS</a></li>
