Update WHAT IS BIG DATA ANALYTICS.html

--- a/WHAT IS BIG DATA ANALYTICS.html
+++ b/WHAT IS BIG DATA ANALYTICS.html
@@ -27,6 +27,7 @@
         <p>It consists of asking the question: What is likely to happen? It uses past data in order to predict the future. It is all about forecasting. Predictive analytics uses many techniques like data mining and artificial intelligence to analyze current data and make scenarios of what might happen.</p>
         <h4>Prescriptive Analytics</h4>
         <p>It consists of asking the question: What should be done? It is dedicated to finding the right action to be taken. Descriptive analytics provides a historical data, and predictive analytics helps forecast what might happen. Prescriptive analytics uses these parameters to find the best solution.</p>
+        <img src="https://docs.oracle.com/ar/solutions/learn-advanced-analytics-big-data/img/big-data-analytics-process-flow.png"> 
     </header>
 </body>
 </html>
