--- a/WHAT IS BIG DATA.html
+++ b/WHAT IS BIG DATA.html
@@ -24,7 +24,7 @@
         <p>To this classical characterization, two other "V"s are important:</p>
         <p>Veracity: level of quality, accuracy and uncertainty of data and data sources.</p>
         <p>Value: the value and potential derived from data.</p>
-        <img src="https://docs.oracle.com/ar/solutions/learn-advanced-analytics-big-data/img/big-data-analytics-process-flow.png"> 
+        <img src="https://cdn.ttgtmedia.com/rms/onlineimages/data_management-big_data_vs_desktop.png"> 
     </header>
 </body>
 </html>
