Update WHAT IS BIG DATA.html

--- a/WHAT IS BIG DATA.html
+++ b/WHAT IS BIG DATA.html
@@ -24,7 +24,25 @@
         <p>To this classical characterization, two other "V"s are important:</p>
         <p>Veracity: level of quality, accuracy and uncertainty of data and data sources.</p>
         <p>Value: the value and potential derived from data.</p>
-        <img src="https://cdn.ttgtmedia.com/rms/onlineimages/data_management-big_data_vs_desktop.png"> 
+        
+<table style="width:100%">
+  <tr>
+    <th>Volume</th>
+    <th>Variety</th>
+    <th>Velociety</th>
+    <th>Veracity</th>
+    <th>Value</th>
+    <th>Variability</th>
+  </tr>
+  <tr>
+    <td>The amount of data from myriad sources.</td>
+    <td>The types of data: structured semi-structured unstructured.</td>
+    <td>The speed at which big data is generated.</td>
+    <td>The degree to which big data can be trusted.</td>
+    <td>The business value of the data collected.</td>
+    <td>The ways in which the big data can be used and formatted.</td>
+  </tr>
+        </table>
     </header>
 </body>
 </html>
