Update WHAT IS BIG DATA.html

--- a/WHAT IS BIG DATA.html
+++ b/WHAT IS BIG DATA.html
@@ -24,6 +24,12 @@
         <p>To this classical characterization, two other "V"s are important:</p>
         <p>Veracity: level of quality, accuracy and uncertainty of data and data sources.</p>
         <p>Value: the value and potential derived from data.</p>
+        <style>
+            table{
+                border-collapse: collapse;
+                width: 100%;
+            }
+        </style>
         
 <table style="width:100%">
   <tr>
