--- a/WHAT IS BIG DATA.html
+++ b/WHAT IS BIG DATA.html
@@ -24,11 +24,22 @@
         <p>To this classical characterization, two other "V"s are important:</p>
         <p>Veracity: level of quality, accuracy and uncertainty of data and data sources.</p>
         <p>Value: the value and potential derived from data.</p>
-        <style>
-            table{
-                border-collapse: collapse;
-                width: 100%;
-            }
+     <style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
         </style>
         
 <table style="width:100%">
